# FemCourseEigenClass2021

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
headers/: Analysis.h  Assemble.h  CMakeLists.txt  CompElement.h  CompElementTemplate.h  CompMesh.h  DOF.h  DataTypes.h  Doxygen.h  GeoElement.h  GeoElementSide.h  GeoElementTemplate.h  GeoMesh.h  GeoNode.h  Geom0d.h  Geom1d.h  GeomQuad.h  GeomTetrahedron.h  GeomTriangle.h  IntPointData.h  IntRule.h  IntRule0d.h  IntRule1d.h  IntRuleQuad.h  IntRuleTetrahedron.h  IntRuleTriangle.h  L2Projection.h  MathStatement.h  NullStatement.h  Poisson.h  PostProcess.h  PostProcessTemplate.h  ReadGmsh.h  Shape0d.h  Shape1d.h  ShapeQuad.h  ShapeTetrahedron.h  ShapeTriangle.h  Topology0d.h  Topology1d.h  (+5 more)
mainprograms/: CMakeLists.txt  TestGeom.cpp  TestIntegrate.cpp  TestOneDProblem.cpp  TestShape.cpp  TestThreeDProblem.cpp  TestTwoDProblem.cpp  TestVictor.geo  TestVictor.msh  Testmatrix.cpp  TriangleVitor  TriangleVitor.geo  cube3D.geo  cube3D.msh  main2021.cpp  mainAssemble.cpp  mainCalcstiff.cpp  mainContribute.cpp  mainEigenTest.cpp  mainPostProcess.cpp  maingeom.cpp  mainintegration.cpp  mainstiff.cpp  one element.geo  one element.msh  oneD.geo  oneD.msh  quadq3.geo  quadq3.msh  quads.geo  quads.msh
mainprograms/MalhasTarefaFEM/: MalhaQuad2x2.geo  MalhaQuad2x2.msh  MallaCuadrados.geo  MallaCuadrados.msh  MallaTriang1El.geo  MallaTriang1El.msh  MallaTriangular.geo  MallaTriangular.msh  MallaTriangulos.geo  MallaTriangulos.msh  QuadCorrectMesh.msh  Triang2El.geo  Triang2El.msh  Triang2El_old.msh  mallanueva  quadq3.geo  quadq3.msh
sources/: Analysis.cpp  Assemble.cpp  CMakeLists.txt  CompElement.cpp  CompElementTemplate.cpp  CompMesh.cpp  DOF.cpp  GeoElement.cpp  GeoElementSide.cpp  GeoElementTemplate.cpp  GeoMesh.cpp  GeoNode.cpp  Geom0d.cpp  Geom1d.cpp  GeomQuad.cpp  GeomTetrahedron.cpp  GeomTriangle.cpp  IntRule.cpp  IntRule0d.cpp  IntRule1d.cpp  IntRuleQuad.cpp  IntRuleTetrahedron.cpp  IntRuleTriangle.cpp  L2Projection.cpp  MathStatement.cpp  NullStatement.cpp  Poisson.cpp  PostProcess.cpp  ReadGmsh.cpp  Shape0d.cpp  Shape1d.cpp  ShapeQuad.cpp  ShapeTetrahedron.cpp  ShapeTriangle.cpp  Topology0d.cpp  Topology1d.cpp  TopologyQuad.cpp  TopologyTetrahedron.cpp  TopologyTriangle.cpp  VTKGeoMesh.cpp  (+1 more)
tinyxml/: CMakeLists.txt  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
